experimental/parser/testdata/parser/package/absolute.proto.stderr.txt
error: unexpected absolute path in `package` declaration
  --> testdata/parser/package/absolute.proto:17:9
   | 
17 | package .test.test2;
   |         ^^^^^^^^^^^ expected a path without a leading `.`

error: unexpected absolute path in `package` declaration
  --> testdata/parser/package/absolute.proto:17:9
   | 
17 | package .test.test2;
   |         ^^^^^^^^^^^ expected a path without a leading `.`

encountered 2 errors
